--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "5.45.0",
+    "@typescript-eslint/parser": "5.45.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "prettier": "2.8.0",
+    "autoprefixer": "10.4.13",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/parser": "5.45.0",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "tailwindcss": "3.2.4",
     "postcss": "8.4.19",
-    "autoprefixer": "10.4.13"
+    "prettier": "2.8.0",
+    "tailwindcss": "3.2.4",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.3"
   }
 }
