--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.10",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
